--- a/ui-style.css
+++ b/ui-style.css
@@ -201,6 +201,17 @@ body {
 
 }
 
+.OLSKVisibilityScreenreader {
+	display: unset !important;
+
+	position: absolute;
+	left: -10000px;
+	top: auto;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+}
+
 /* OLSKToolbar */
 
 .OLSKToolbar {
