Lower disabled opacity

--- a/ui-style.css
+++ b/ui-style.css
@@ -514,6 +514,10 @@ a.OLSKDecorPress {
 	color: var(--OLSKCodeForeground);
 }
 
+.OLSKDecor :disabled {
+	opacity: 0.5;
+}
+
 /* OLSKDecorTitle */
 
 .OLSKDecorTitle {
